--- a/app/views/comments/new.html.erb
+++ b/app/views/comments/new.html.erb
@@ -1,2 +1,13 @@
-<h1>Comments#new</h1>
-<p>Find me in app/views/comments/new.html.erb</p>
+<%= render('layouts/errors', :object => @comment) %>
+<h1>Comment</h1>
+
+
+<%= form_for @comment do |f| %>
+<%= hidden_field_tag "comment[link_id]", @link.id %>
+<%= f.label :name %>
+<%= f.text_field :name %>
+<%= f.label :comment %>
+<%= f.text_area :text %>
+<%= f.submit %>
+<% end %>
+
