--- a/app/views/links/show.html.erb
+++ b/app/views/links/show.html.erb
@@ -1,13 +1,15 @@
+<%= render('layouts/jumbo') %>
+
 <h1><%= @link.name %></h1>
-<%= link_to "Add Comment", new_link_comment_path(@link) %>
+<%= link_to "add comment", new_link_comment_path(@link) %>
 
 <% @link.comments.each do |comment| %>
   <h4><%= comment.name %></h4>
   <blockquote>
     <p><%= comment.text %></p>
-    <p><%= link_to "Comment Comment", new_comment_comment_path(comment) %></p>
     <blockquote>
       <%= render('layouts/comments', :object => comment) %>
     </blockquote>
+    <p><%= link_to "respond", new_comment_comment_path(comment), class: "small-link" %></p>
   </blockquote>
 <% end %>
