--- a/app/views/comments/new.html.erb
+++ b/app/views/comments/new.html.erb
@@ -1,3 +1,4 @@
+<%= render('layouts/jumbo') %>
 <%= render('layouts/errors', :object => @comment) %>
 <h1>Comment</h1>
 
@@ -11,4 +12,3 @@
 <%= f.text_area :text %>
 <%= f.submit %>
 <% end %>
-
