remove votes column from links

--- a/app/views/application/index.html.erb
+++ b/app/views/application/index.html.erb
@@ -6,7 +6,7 @@
 
 <% @links.each do |link| %>
   <p>
-    <%= link_to "", link, class: "glyphicon glyphicon-arrow-up green"%>
+    <%= link_to "", link, class: "glyphicon glyphicon-arrow-up green", :rel => 'nofollow' %>
     <%= link_to link.name, link.url %>&nbsp&nbsp
     <%=link_to "x", link_path(link), :method => :delete, :confirm => "Are you sure ?", class: "glyphicon glyphicon-trash red"%>
   </p>
