--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -42,3 +42,14 @@
 .small-link {
   font-size: 12px
 }
+
+.success {
+  @extend .message;
+  border-color: green;
+}
+
+.right {
+  float: right;
+  margin-top: 10px;
+  margin-right: 30px
+}
