--- a/app/views/links/new.html.erb
+++ b/app/views/links/new.html.erb
@@ -4,9 +4,11 @@
 <h1>Add Link</h1>
 
 <%=form_for @link do |f| %>
-  <%= f.label :url %>
-  <%= f.text_field :url %>
-  <%= f.label :name %>
-  <%= f.text_field :name %>
-  <%= f.submit %>
+  <div class="form-group">
+    <%= f.label :url %>
+    <%= f.text_field :url, :class => "form-control" %>
+    <%= f.label :name %>
+    <%= f.text_field :name, :class => "form-control" %>
+  </div>
+  <%= f.submit "submit", :class => "btn btn-primary" %>
 <% end %>
