--- a/app/views/links/new.html.erb
+++ b/app/views/links/new.html.erb
@@ -10,5 +10,5 @@
     <%= f.label :name %>
     <%= f.text_field :name, :class => "form-control" %>
   </div>
-  <%= f.submit "submit", :class => "btn btn-primary" %>
+  <%= f.submit "Create Link", :class => "btn btn-primary" %>
 <% end %>
